Add generic statement import
